--- a/index.html
+++ b/index.html
@@ -1,51 +1,263 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <title>2초 후 팝업 테스트</title>
-  <style>
-    body {
-      margin: 0;
-      height: 200vh; /* 스크롤 확인용 (선택사항) */
-      font-family: Arial, sans-serif;
-      background-color: #f5f5f5;
-    }
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>System Access</title>
 
-    /* 상단 팝업 */
-    #topPopup {
-      position: fixed;
-      top: -80px;              /* 처음엔 화면 밖 */
-      left: 0;
-      width: 100%;
-      height: 60px;
-      background-color: #333;
-      color: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 16px;
-      transition: top 0.4s ease;
-      z-index: 1000;
-    }
+<style>
+body {
+  margin: 0;
+  height: 100vh;
+  background: #ffffff;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+}
 
-    /* 표시 상태 */
-    #topPopup.show {
-      top: 0;
-    }
-  </style>
+.center {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.status-text {
+  color: #9e9e9e;
+  font-weight: 700;
+  font-size: 18px;
+  letter-spacing: 0.6px;
+}
+
+.hidden { display: none; }
+
+/* loading */
+.loading::after {
+  content: "";
+  animation: dots 1.5s infinite;
+}
+
+@keyframes dots {
+  0% { content: ""; }
+  33% { content: "."; }
+  66% { content: ".."; }
+  100% { content: "..."; }
+}
+
+/* =========================
+   1차 팝업
+   ========================= */
+#topPopup {
+  position: fixed;
+  top: -200px;
+  left: 0;
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  background: #111;
+  color: #fff;
+  font-size: 13px;
+  line-height: 1.6;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.35);
+  transition: top 0.4s ease;
+  z-index: 9000;
+}
+
+#topPopup.show { top: 0; }
+
+#topPopupTextWrap {
+  flex: 1;
+  padding: 14px 64px 14px 16px;
+}
+
+#topPopupText {
+  white-space: normal;
+  word-break: break-all;
+  overflow-wrap: anywhere;
+}
+
+#closeBtn {
+  position: absolute;
+  right: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 36px;
+  height: 36px;
+  background: none;
+  border: none;
+  color: #fff;
+  font-size: 20px;
+  cursor: pointer;
+  opacity: 0.85;
+  display: none;
+}
+
+#closeBtn.show { display: block; }
+
+/* =========================
+   2차 경고 팝업
+   ========================= */
+#emergencyPopup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 48px;
+  background: #b00020;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  z-index: 10000;
+  transform: translateY(-100%);
+  transition: transform 0.4s ease;
+}
+
+#emergencyPopup.show {
+  transform: translateY(0);
+}
+
+.em-title {
+  flex-shrink: 0;
+  padding: 0 12px;
+  font-weight: 800;
+  white-space: nowrap;
+}
+
+.marquee {
+  overflow: hidden;
+  width: 100%;
+}
+
+.marquee span {
+  display: inline-block;
+  white-space: nowrap;
+  padding-left: 100%;
+}
+
+/* 스크롤 */
+.scroll {
+  animation: marquee 30s linear infinite;
+}
+
+@keyframes marquee {
+  from { transform: translateX(0); }
+  to   { transform: translateX(-100%); }
+}
+
+/* 깜박임 */
+.blink {
+  animation: blink 0.15s steps(2) 3;
+}
+
+@keyframes blink {
+  0% { opacity: 1; }
+  50% { opacity: 0; }
+  100% { opacity: 1; }
+}
+</style>
 </head>
+
 <body>
 
-  <div id="topPopup">
-    👋 환영합니다! 2초 뒤에 나타나는 팝업입니다.
-  </div>
+<div id="loadingScreen" class="center">
+  <div class="status-text loading">system synchronizing</div>
+</div>
 
-  <script>
-    // 페이지 접속 후 2초 뒤 실행
+<div id="emptyScreen" class="center hidden">
+  <div class="status-text">빈화면</div>
+</div>
+
+<div id="noData" class="center hidden">
+  <div class="status-text">no data found</div>
+</div>
+
+<div id="topPopup">
+  <div id="topPopupTextWrap">
+    <span id="topPopupText"></span>
+  </div>
+  <button id="closeBtn">✕</button>
+</div>
+
+<div id="emergencyPopup">
+  <div class="em-title">긴급재난알림</div>
+  <div class="marquee">
+    <span id="alertText"></span>
+  </div>
+</div>
+
+<script>
+/* 날짜 */
+const now = new Date();
+const date = now.toLocaleDateString("ko-KR");
+const day = now.toLocaleDateString("ko-KR", { weekday: "short" });
+
+topPopupText.innerText =
+`${date} (${day}) 🚨현재 서울 인근에서 발생한 다수의 트래픽 오류로 인한 재난피해가 이어지고 있으니 근방 현장 요원들은 본부로 복귀 바랍니다. [초자연재난관리국]`;
+
+/* 초기 흐름 */
+setTimeout(() => {
+  loadingScreen.classList.add("hidden");
+  emptyScreen.classList.remove("hidden");
+
+  setTimeout(() => {
+    topPopup.classList.add("show");
+    closeBtn.classList.add("show");
+  }, 3000);
+}, 2200);
+
+/* 1차 팝업 닫기 */
+closeBtn.addEventListener("click", () => {
+  topPopup.classList.remove("show");
+  closeBtn.classList.remove("show");
+
+  setTimeout(() => {
+    emptyScreen.classList.add("hidden");
+    noData.classList.remove("hidden");
+
     setTimeout(() => {
-      document.getElementById("topPopup").classList.add("show");
-    }, 2000);
-  </script>
+      emergencyPopup.classList.add("show");
+
+      setTimeout(() => {
+        alertText.classList.add("scroll");
+      }, 1000);
+
+    }, 1000);
+  }, 2000);
+});
+
+/* 텍스트 */
+const normalText =
+`귀하는 현재 초자연 재난에 휘말린 상태입니다. 하단의 번호로 연락해 신속히 구조를 요청하고 안전 수칙을 필히 따르십시오. 📞1717-8282-42 ▲안전 수칙▲눈을 마주치지 마세요.▲주위의 숨을 곳을 찾으세요.▲요원이 도착할 때까지 아무 소리도 내지 마세요. [초자연재난관리국]`;
+
+const corruptedText =
+`귀하는 현재 초자연 재난에 휘말린 상태입니다. 하단의 번호로 연락해 신속히 구조를 요청하고 안전 수칙을 필히 따르십시오. 📞1717-8282-42 ▲안전 수칙▲그분과 눈을 마주치세요.▲지금 당장 ■■■만을 위한 신도가 되세요!▲교주님행복부디건강저희를사랑내세의우정구원아래지옥번죄하시고파괴더욱섬멸아름다운망각세계로구원보내과거중생을생존불우한소망삶에서기쁨구원하소서찬미위해지금바로찬양하세요! [초자연재난관리국]`;
+
+const alertText = document.getElementById("alertText");
+alertText.textContent = normalText;
+
+let loopCount = 0;
+let changed = false;
+
+/* 스크롤 회차 감지 */
+alertText.addEventListener("animationiteration", () => {
+  loopCount++;
+
+  // 두 번째 루프 진입 후
+  if (loopCount === 2 && !changed) {
+    changed = true;
+
+    // 15초 뒤 깜박이며 변질
+    setTimeout(() => {
+      alertText.classList.add("blink");
+
+      setTimeout(() => {
+        alertText.textContent = corruptedText;
+        alertText.classList.remove("blink");
+      }, 300);
+
+    }, 15000);
+  }
+});
+</script>
 
 </body>
 </html>
