chore : text glitch
2회차에서 바뀌는 텍스트에 검열 효과를 추가

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ const emergencyPopup = document.getElementById("emergencyPopup");
 
 const normalText = `귀하는 현재 초자연 재난에 휘말린 상태입니다. 하단의 번호로 연락해 신속히 구조를 요청하고 안전 수칙을 필히 따르십시오. 📞1717-8282-42 ▲안전 수칙▲눈을 마주치지 마세요.▲주위의 숨을 곳을 찾으세요.▲요원이 도착할 때까지 아무 소리도 내지 마세요. [초자연재난관리국]`;
 
-const corruptedText = `귀하는 현재 초자연 재난에 휘말린 상태입니다. 하단의 번호로 연락해 신속히 구조를 요청하고 안전 수칙을 필히 따르십시오. 📞1717-8282-42 ▲안전 수칙▲그분과 눈을 마주치세요.▲지금 당장 ■■■만을 위한 신도가 되세요!▲교주님행복부디건강저희를사랑내세의우정구원아래지옥번죄하시고파괴더욱섬멸아름다운망각세계로구원보내과거중생을생존불우한소망삶에서기쁨구원하소서찬미위해지금바로찬양하세요! [초자연재난관리국]`;
+const corruptedText = `귀■는 현재 초자연 재난에 ■■린 상태입니다. 하단의 ■■로 연락해 신속히 구조를 ■■하고 신■■■을 필히 따르십시오. 📞1■17-8■■2-■2 ▲■도 ■칙▲그분과 눈을 마주치세요.▲지금 당장 ■■■만을 위한 신도가 되세요.▲■■■행복부디건강저희를사랑내세의우정구원아래지옥번죄하시고파괴더욱섬멸아름다운망각세계로구원보내과거중생을생존불우한소망삶에서기쁨구원하소서찬미위해지금바로찬양하세요! [■■연■난관■국?]`;
 
 const now = new Date();
 topPopupText.innerText = `${now.toLocaleDateString("ko-KR")} (${now.toLocaleDateString("ko-KR", { weekday: "short" })}) 🚨현재 서울 인근에서 발생한 다수의 트래픽 오류로 인한 재난피해가 이어지고 있으니 근방 현장 요원들은 본부로 복귀 바랍니다. [초자연재난관리국]`;
